--- a/code/chap05soln.ipynb
+++ b/code/chap05soln.ipynb
@@ -367,8 +367,10 @@
     "    returns: State object for final state\n",
     "    \"\"\"\n",
     "    state = system.init\n",
-    "    for t in linrange(system.t0, system.t_end):\n",
+    "    \n",
+    "    for t in linrange(system.t0, system.t_end-1):\n",
     "        state = update_func(state, system)\n",
+    "        \n",
     "    return state"
    ]
   },
@@ -523,7 +525,7 @@
     "    t0 = system.t0\n",
     "    S[t0], I[t0], R[t0] = state\n",
     "    \n",
-    "    for t in linrange(system.t0, system.t_end):\n",
+    "    for t in linrange(system.t0, system.t_end-1):\n",
     "        state = update_func(state, system)\n",
     "        S[t+1], I[t+1], R[t+1] = state\n",
     "    \n",
@@ -656,7 +658,7 @@
     "    frame = DataFrame(columns=system.init.index)\n",
     "    frame.loc[system.t0] = system.init\n",
     "    \n",
-    "    for t in linrange(system.t0, system.t_end):\n",
+    "    for t in linrange(system.t0, system.t_end-1):\n",
     "        frame.loc[t+1] = update_func(frame.loc[t], system)\n",
     "    \n",
     "    system.results = frame"
@@ -1256,11 +1258,13 @@
     "    returns: Sweep object\n",
     "    \"\"\"\n",
     "    sweep = SweepSeries()\n",
+    "    \n",
     "    for fraction in immunize_array:\n",
     "        system = make_system(beta, gamma)\n",
     "        add_immunization(system, fraction)\n",
     "        run_simulation(system, update1)\n",
     "        sweep[fraction] = calc_total_infected(system)\n",
+    "        \n",
     "    return sweep"
    ]
   },
@@ -1612,11 +1616,13 @@
     "    returns: Sweep object\n",
     "    \"\"\"\n",
     "    sweep = SweepSeries()\n",
+    "    \n",
     "    for spending in spending_array:\n",
     "        system = make_system(beta, gamma)\n",
     "        add_hand_washing(system, spending)\n",
     "        run_simulation(system, update1)\n",
     "        sweep[spending] = calc_total_infected(system)\n",
+    "        \n",
     "    return sweep"
    ]
   },
@@ -1796,6 +1802,7 @@
     "    return: Sweep object with total number of infections \n",
     "    \"\"\"\n",
     "    sweep = SweepSeries()\n",
+    "    \n",
     "    for doses in dose_array:\n",
     "        fraction = doses / num_students\n",
     "        spending = budget - doses * price_per_dose\n",
