--- a/code/examples/bungee.ipynb
+++ b/code/examples/bungee.ipynb
@@ -1010,7 +1010,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Sometimes you can avoid breaking a simulation into phases if you can write one slope function that works across multiple phases.  In this case, you can.\n",
+    "**Exercise:** Sometimes you can avoid breaking a simulation into phases if you write one slope function that works across multiple phases.  In this case, you can.\n",
     "\n",
     "Modify the second slope function so that it includes the effect of the spring if the spring force acts upward, and ignores it otherwise (because the bungee cord goes slack when it is compressed).  Run the simulation through Phases 1 and 2."
    ]
