--- a/code/soln/chap10soln.ipynb
+++ b/code/soln/chap10soln.ipynb
@@ -32,7 +32,7 @@
     "# If you want the figures to appear in separate windows, use\n",
     "# %matplotlib qt5\n",
     "\n",
-    "# tempo switch from one to another, you have to select Kernel->Restart\n",
+    "# to switch from one to another, you have to select Kernel->Restart\n",
     "\n",
     "%matplotlib notebook\n",
     "\n",
@@ -50,7 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A `Vector` object is like a combination of a NumPy array and a Pint Quantity.\n",
+    "A `Vector` object represents a vector quantity.  In the context of mechanics, vector quantities include position, velocity, acceleration, and force, all of which might be in 2D or 3D.\n",
+    "\n",
+    "You can define a `Vector` object without units, but if it represents a physical quantity, you will often want to attach units to it.\n",
     "\n",
     "I'll start by grabbing the units we'll need."
    ]
@@ -266,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And substract like this:"
+    "And subtract like this:"
    ]
   },
   {
@@ -646,7 +648,7 @@
    "source": [
     "**Exercise:** Create a `Vector` named `a_force` that represents acceleration due to a force of 0.5 Newton applied to an object with mass 0.3 kilograms, in a direction 45 degrees up from the positive x-axis.\n",
     "\n",
-    "Add `a_force` to `a_drag` from the previous exercise.  If that addition succeeds, that means that the units are compatible.  Confirm that the total acceleration seems to make sense."
+    "Add `a_force` to `a_grav` from the previous exercise.  If that addition succeeds, that means that the units are compatible.  Confirm that the total acceleration seems to make sense."
    ]
   },
   {
