--- a/code/soln/throwingaxesoln.ipynb
+++ b/code/soln/throwingaxesoln.ipynb
@@ -95,7 +95,7 @@
     "    \n",
     "    return System(init=init, ts=ts,\n",
     "                  g = 9.8 * m/s**2,\n",
-    "                  m = 1.5 * kg,\n",
+    "                  mass = 1.5 * kg,\n",
     "                  length = 0.7 * m)"
    ]
   },
@@ -152,7 +152,7 @@
        "      <td>9.8 meter / second ** 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>m</th>\n",
+       "      <th>mass</th>\n",
        "      <td>1.5 kilogram</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -168,7 +168,7 @@
        "y                 ...\n",
        "ts        [0.0 second, 0.01 second, 0.02 second, 0.03 se...\n",
        "g                                   9.8 meter / second ** 2\n",
-       "m                                              1.5 kilogram\n",
+       "mass                                           1.5 kilogram\n",
        "length                                            0.7 meter\n",
        "dtype: object"
       ]
@@ -348,8 +348,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 96 ms, sys: 0 ns, total: 96 ms\n",
-      "Wall time: 92.7 ms\n"
+      "CPU times: user 124 ms, sys: 0 ns, total: 124 ms\n",
+      "Wall time: 122 ms\n"
      ]
     }
    ],
