--- a/code/chap02.ipynb
+++ b/code/chap02.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
-    "Chapter 1: Modeling\n",
+    "Chapter 2\n",
     "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
