--- a/code/soln/chap01soln.ipynb
+++ b/code/soln/chap01soln.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
+    "Chapter 1\n",
+    "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
     "License: [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0)"
