--- a/code/soln/chap03soln.ipynb
+++ b/code/soln/chap03soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
-    "Chapter 2: Simulation\n",
+    "Chapter 3\n",
     "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
