--- a/code/soln/chap07soln.ipynb
+++ b/code/soln/chap07soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
-    "Chapter 3: Explain\n",
+    "Chapter 7\n",
     "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
