--- a/code/soln/chap08soln.ipynb
+++ b/code/soln/chap08soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
-    "Chapter 4: Predict\n",
+    "Chapter 8\n",
     "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
