chap01_aferzoco.ipynb
Changed "How long until the penny reaches 18 meters with constant acceleration" to "How long until the penny reaches 18 meters per second with constant acceleration."

--- a/code/chap01.ipynb
+++ b/code/chap01.ipynb
@@ -394,7 +394,7 @@
     "\n",
     "You can break this question into three parts:\n",
     "\n",
-    "1. How long until the penny reaches 18 meters with constant acceleration `a`.\n",
+    "1. How long until the penny reaches 18 meters per second with constant acceleration `a`.\n",
     "2. How far would the penny fall during that time?\n",
     "3. How long to fall the remaining distance with constant velocity 18 m/s?\n",
     "\n",
