--- a/code/chap10.ipynb
+++ b/code/chap10.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,12 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "census = table2.census / 1e9\n",
     "census.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "un = table2.un / 1e9\n",
+    "un.shape"
    ]
   },
   {
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -341,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -390,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +439,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_simulation(system, update_func):\n",
+    "    \"\"\"Simulate the system using any update function.\n",
+    "    \n",
+    "    system: System object\n",
+    "    update_func: function that computes the population next year\n",
+    "    \n",
+    "    returns: TimeSeries\n",
+    "    \"\"\"\n",
+    "    results = TimeSeries()\n",
+    "    results[system.t_0] = system.p_0\n",
+    "    \n",
+    "    for t in linrange(system.t_0, system.t_end-1):\n",
+    "        results[t+1] = update_func(results[t], t, system)\n",
+    "        \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,12 +471,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
