--- a/code/chap07.ipynb
+++ b/code/chap07.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,20 +329,20 @@
    "source": [
     "Now let's see all the ways that can go wrong.\n",
     "\n",
-    "**Disfunction #1:** Not using parameters.  In the following version, the function doesn't take any parameters; when `system` appears inside the function, it refers to the object we created outside the function.\n"
+    "**Disfunction #1:** Not using parameters.  In the following version, the function doesn't take any parameters; when `sys1` appears inside the function, it refers to the object we created outside the function.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def carrying_capacity():\n",
-    "    K = -system.alpha / system.beta\n",
+    "    K = -sys1.alpha / sys1.beta\n",
     "    return K\n",
     "    \n",
-    "system = System(alpha=0.025, beta=-0.0018)\n",
+    "sys1 = System(alpha=0.025, beta=-0.0018)\n",
     "pop = carrying_capacity()\n",
     "print(pop)"
    ]
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,8 @@
     "    \n",
     "sys2 = System(alpha=0.025, beta=-0.0018)\n",
     "carrying_capacity(sys2)\n",
-    "print(K)"
+    "\n",
+    "# print(K)     This line won't work because K only exists inside the function."
    ]
   },
   {
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -494,12 +495,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
