--- a/code/chap08.ipynb
+++ b/code/chap08.ipynb
@@ -177,7 +177,7 @@
    "source": [
     "t_0 = get_first_label(census)\n",
     "t_end = get_last_label(census)\n",
-    "p_0 = census[t_0]"
+    "p_0 = get_first_value(census)"
    ]
   },
   {
@@ -401,163 +401,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional exercise\n",
+    "## Exercises\n",
     "\n",
-    "The following exercise provides a chance to practice what you have learned so far, and maybe develop a different growth model.  If you feel comfortable with what we have done so far, you might want to give it a try.\n",
+    "**Optional exercise:** The net growth rate of world population has been declining for several decades.  That observation suggests one more way to generate projections, by extrapolating observed changes in growth rate.\n",
     "\n",
-    "**Optional Exercise:** On the Wikipedia page about world population estimates, the first table contains estimates for prehistoric populations.  The following cells process this table and plot some of the results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Select `table1`, which is the second table on the page."
+    "The `modsim` library provides a function, `compute_rel_diff`, that computes relative differences of the elements in a sequence.  It is a wrapper for the NumPy function `ediff1d`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table1 = tables[1]\n",
-    "table1.head()"
+    "source_code(compute_rel_diff)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not all agencies and researchers provided estimates for the same dates.  Again `NaN` is the special value that indicates missing data."
+    "Here's how we can use it to compute the relative differences in the `census` and `un` estimates:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table1.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of the estimates are in a form we can't read as numbers.  We could clean them up by hand, but for simplicity I'll replace any value that has an `M` in it with `NaN`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "table1.replace('M', np.nan, regex=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Again, we'll replace the long column names with more convenient abbreviations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "table1.columns = ['prb', 'un', 'maddison', 'hyde', 'tanton', \n",
-    "                  'biraben', 'mj', 'thomlinson', 'durand', 'clark']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This function plots selected estimates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def plot_prehistory(table):\n",
-    "    \"\"\"Plots population estimates.\n",
-    "    \n",
-    "    table: DataFrame\n",
-    "    \"\"\"\n",
-    "    plot(table.prb, 'ro', label='PRB')\n",
-    "    plot(table.un, 'co', label='UN')\n",
-    "    plot(table.hyde, 'yo', label='HYDE')\n",
-    "    plot(table.tanton, 'go', label='Tanton')\n",
-    "    plot(table.biraben, 'bo', label='Biraben')\n",
-    "    plot(table.mj, 'mo', label='McEvedy & Jones')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here are the results.  Notice that we are working in millions now, not billions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "plot_prehistory(table1)\n",
-    "decorate(xlabel='Year', \n",
-    "         ylabel='World population (millions)',\n",
-    "         title='Prehistoric population estimates')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can use `xlim` to zoom in on everything after Year 0."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_prehistory(table1)\n",
-    "decorate(xlim=[0, 2000], xlabel='Year', \n",
-    "         ylabel='World population (millions)',\n",
-    "         title='Prehistoric population estimates')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See if you can find a model that fits these data well from Year -1000 to 1940, or from Year 1 to 1940.\n",
+    "alpha_census = compute_rel_diff(census)\n",
+    "plot(alpha_census)\n",
     "\n",
-    "How well does your best model predict actual population growth from 1950 to the present?"
+    "alpha_un = compute_rel_diff(un)\n",
+    "plot(alpha_un)\n",
+    "\n",
+    "decorate(xlabel='Year', label='Net growth rate')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other than a bump around 1990, net growth rate has been declining roughly linearly since 1965.  As an exercise, you can use this data to make a projection of world population until 2100.\n",
+    "\n",
+    "1. Define a function, `alpha_func`, that takes `t` as a parameter and returns an estimate of the net growth rate at time `t`, based on a linear function `alpha = intercept + slope * t`.  Choose values of `slope` and `intercept` to fit the observed net growth rates since 1965.\n",
+    "\n",
+    "2. Call your function with a range of `ts` from 1960 to 2020 and plot the results.\n",
+    "\n",
+    "3. Create a `System` object that includes `alpha_func` as a system variable.\n",
+    "\n",
+    "4. Define an update function that uses `alpha_func` to compute the net growth rate at the given time `t`.\n",
+    "\n",
+    "5. Test your update function with `t_0 = 1960` and `p_0 = census[t_0]`.\n",
+    "\n",
+    "6. Run a simulation from 1960 to 2100 with your update function, and plot the results.\n",
+    "\n",
+    "7. Compare your projections with those from the US Census and UN."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,12 +489,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
