--- a/code/soln/chap15soln.ipynb
+++ b/code/soln/chap15soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
-    "Chapter 14\n",
+    "Chapter 15\n",
     "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
@@ -648,6 +648,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercises\n",
+    "\n",
     "**Exercise:**  Simulate the temperature of 50 mL of milk with a starting temperature of 5 degC, in a vessel with the same insulation, for 15 minutes, and plot the results.\n",
     "\n",
     "By trial and error, find a values for `r` that makes the final temperature close to 20 C."
@@ -727,5 +729,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
