--- a/code/soln/chap16soln.ipynb
+++ b/code/soln/chap16soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modeling and Simulation in Python\n",
     "\n",
-    "Chapter 15\n",
+    "Chapter 16\n",
     "\n",
     "Copyright 2017 Allen Downey\n",
     "\n",
@@ -925,27 +925,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:**  Suppose the coffee shop won't let me take milk in a separate container, but I keep a bottle of milk in the refrigerator at my office.  In that case is it better to add the milk at the coffee shop, or wait until I get to the office?\n",
-    "\n",
-    "Hint: Think about the simplest way to represent the behavior of a refrigerator in this model.  The change you make to test this variation of the problem should be very small!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution\n",
-    "\n",
-    "## A refrigerator keeps the milk at a constant temperature,\n",
-    "## so it is like a container with r = 0."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Analysis"
    ]
   },
@@ -1069,6 +1048,29 @@
    "source": [
     "coffee.T_final - coffee2.T_final"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "**Exercise:**  Suppose the coffee shop won't let me take milk in a separate container, but I keep a bottle of milk in the refrigerator at my office.  In that case is it better to add the milk at the coffee shop, or wait until I get to the office?\n",
+    "\n",
+    "Hint: Think about the simplest way to represent the behavior of a refrigerator in this model.  The change you make to test this variation of the problem should be very small!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution\n",
+    "\n",
+    "## A refrigerator keeps the milk at a constant temperature,\n",
+    "## so it is like a container with r = 0."
+   ]
   }
  ],
  "metadata": {
@@ -1091,5 +1093,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
