Working on notebooks

--- a/code/soln/chap13soln.ipynb
+++ b/code/soln/chap13soln.ipynb
@@ -129,7 +129,7 @@
     "    frame = TimeFrame(columns=init.index)\n",
     "    frame.row[t0] = init\n",
     "    \n",
-    "    for i in linrange(t0, t_end):\n",
+    "    for i in linrange(t0, t_end-1):\n",
     "        frame.row[i+1] = update_func(frame.row[i], system)\n",
     "    \n",
     "    return frame"
