Working on 1D projectile

--- a/code/soln/chap20soln.ipynb
+++ b/code/soln/chap20soln.ipynb
@@ -203,7 +203,6 @@
     }
    ],
    "source": [
-    "t_0 = 0 * s\n",
     "t_end = 10 * s"
    ]
   },
@@ -256,10 +255,6 @@
        "      <td>9.8 meter / second ** 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>t_0</th>\n",
-       "      <td>0 second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>t_end</th>\n",
        "      <td>10 second</td>\n",
        "    </tr>\n",
@@ -271,7 +266,6 @@
        "init     y             381 meter\n",
        "v    0.0 meter / secon...\n",
        "g                                  9.8 meter / second ** 2\n",
-       "t_0                                               0 second\n",
        "t_end                                            10 second\n",
        "dtype: object"
       ]
@@ -282,7 +276,7 @@
     }
    ],
    "source": [
-    "system = System(init=init, g=g, t_0=t_0, t_end=t_end)"
+    "system = System(init=init, g=g, t_end=t_end)"
    ]
   },
   {
@@ -1287,6 +1281,15 @@
    ],
    "source": [
     "%psource crossings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The [documentation of InterpolatedUnivariateSpline is here](https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.InterpolatedUnivariateSpline.html).\n",
+    "\n",
+    "And you can read the [documentation of `scipy.integrate.solve_ivp`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_ivp.html) to learn more about how `run_ode_solver` works."
    ]
   },
   {
