--- a/code/chap02.ipynb
+++ b/code/chap02.ipynb
@@ -726,7 +726,7 @@
     "         xlabel='Time step (min)', \n",
     "         ylabel='Number of bikes')\n",
     "\n",
-    "savefig('chap01-fig01.pdf')"
+    "savefig('figs/chap01-fig01.pdf')"
    ]
   },
   {
@@ -925,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
