--- a/code/soln/chap08soln.ipynb
+++ b/code/soln/chap08soln.ipynb
@@ -358,7 +358,7 @@
     "system.t_end = 2250\n",
     "results = run_simulation(system, update_func_quad)\n",
     "plot_results(census, un, results, 'World population projection')\n",
-    "savefig('chap04-fig01.pdf')"
+    "savefig('figs/chap04-fig01.pdf')"
    ]
   },
   {
@@ -719,7 +719,7 @@
     "\n",
     "plot_results(census, un, results, 'World population projections')\n",
     "plot_projections(table3)\n",
-    "savefig('chap04-fig02.pdf')"
+    "savefig('figs/chap04-fig02.pdf')"
    ]
   },
   {
