--- a/code/soln/filter_soln.ipynb
+++ b/code/soln/filter_soln.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "The following circuit diagram (from [Wikipedia](https://en.wikipedia.org/wiki/File:RC_Divider.svg)) shows a low-pass filter built with one resistor and one capacitor.  \n",
     "\n",
-    "![Low-pass filterc circuit diagram](diagrams/RC_Divider.svg)\n",
+    "![Low-pass filter circuit diagram](diagrams/RC_Divider.svg)\n",
     "\n",
     "A \"filter\" is a circuit takes a signal, $V_{in}$, as input and produces a signal, $V_{out}$, as output.  In this context, a \"signal\" is a voltage that changes over time.\n",
     "\n",
