--- a/book/book.tex
+++ b/book/book.tex
@@ -2672,7 +2672,7 @@ And compare our projections to theirs.  Figure~\ref{chap04-fig02} shows the resu
 
 \index{demography}
 
-Nevertheless, their projections are qualitatively similar to ours, and theirs differ from each other almost as much as they differ from ours.  So the results from this model, simple as it is, are not entirely crazy.
+Nevertheless, their projections are qualitatively similar to ours, and theirs differ from each other almost as much as they differ from ours.  So the results from this model, simple as it is, are not entirely unreasonable.
 
 Before you go on, you might want to read the notebook for this chapter, \py{chap08.ipynb}, and work on the exercises.  For instructions on downloading and running the code, see Section~\ref{code}.
 
